tests/expectations/compiler/integers/i32/max_fail.out
Error [ETYC0372008]: The value 2147483648 is not a valid `i32`
    --> compiler-test:4:18
     |
   4 |     let a: i32 = 2147483648i32;
     |                  ^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
